@@ -43,6 +43,7 @@ endif::[]
 ===== Fixed
 
 - Handle invalid utf-8 byte sequences in sql summarizer and DB statement {pull}896[#896]
+- Expand Kubernetes metadata discovery {pull}916[#916]
 
 [float]
 ===== Added
